# yoctogram-app

./: Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4f88c225920f_add_user_bio.py  9c37fc7757b4_add_image_uploaded_field.py  e59704a0f553_create_initial_tables.py
app/: main.py  prestart.py
app/api/: __init__.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  feed.py  images.py  users.py
app/core/: config.py
app/ext/: s3.py
app/models/: image.py  user.py
app/schemas/: user.py
